Cropped logo to prevent obstruction of social links. Hover shadow added to social link box

--- a/Personal-Site/src/app/app.component.css
+++ b/Personal-Site/src/app/app.component.css
@@ -12,9 +12,8 @@
 }
 
 #siteLogo {
-    height: 900px;
-    width: 1750px;
     float: right;
     position: relative;
     top: -320px;
+    right: 260px;
 }
